--- a/src/myMP3Player/MyMP3Player.fxml
+++ b/src/myMP3Player/MyMP3Player.fxml
@@ -1,5 +1,88 @@
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<GridPane fx:controller="myMP3Player.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <TitledPane animated="false" collapsible="false" prefHeight="60.0" prefWidth="600.0" text="Audio Settings">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="598.0">
+                     <children>
+                        <FlowPane columnHalignment="CENTER" prefHeight="50.0" prefWidth="600.0">
+                           <children>
+                              <Label text="Output">
+                                 <padding>
+                                    <Insets right="10.0" top="10.0" />
+                                 </padding>
+                              </Label>
+                              <ComboBox prefWidth="150.0" />
+                              <Button mnemonicParsing="false" text="Valider" />
+                              <Label text="Master volume">
+                                 <padding>
+                                    <Insets left="10.0" right="10.0" />
+                                 </padding>
+                              </Label>
+                              <Slider />
+                           </children>
+                        </FlowPane>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </TitledPane>
+            <TitledPane animated="false" collapsible="false" text="Player">
+               <content>
+                  <BorderPane prefHeight="50.0" prefWidth="200.0">
+                     <center>
+                        <Slider prefHeight="14.0" prefWidth="405.0" BorderPane.alignment="CENTER" />
+                     </center>
+                     <bottom>
+                        <Label text="Nom de la musique" BorderPane.alignment="CENTER" />
+                     </bottom>
+                     <top>
+                        <HBox alignment="CENTER" prefHeight="29.0" prefWidth="579.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <Button mnemonicParsing="false" text="Stop" />
+                              <Button mnemonicParsing="false" text="Play" />
+                              <Button mnemonicParsing="false" text="Pause" />
+                           </children>
+                        </HBox>
+                     </top>
+                  </BorderPane>
+               </content>
+            </TitledPane>
+         </children>
+      </VBox>
+   </top>
+   <center>
+      <TitledPane animated="false" collapsible="false" text="Playlist" BorderPane.alignment="CENTER">
+         <content>
+            <BorderPane prefHeight="200.0" prefWidth="200.0">
+               <bottom>
+                  <HBox BorderPane.alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" text="Add" />
+                     </children>
+                  </HBox>
+               </bottom>
+               <center>
+                  <ListView BorderPane.alignment="CENTER" />
+               </center>
+            </BorderPane>
+         </content>
+      </TitledPane>
+   </center>
+</BorderPane>
