--- a/src/myMP3Player/MyMP3Player.fxml
+++ b/src/myMP3Player/MyMP3Player.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:controller="myMP3Player.Controller" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myMP3Player.Controller">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <TitledPane animated="false" collapsible="false" prefHeight="60.0" prefWidth="600.0" text="Audio Settings">
@@ -24,24 +24,34 @@
                         <Insets right="10.0" top="10.0" />
                      </padding>
                   </Label>
-                  <ComboBox id="comboAudioOutput" prefWidth="150.0" />
+                  <ComboBox id="comboAudioOutput" fx:id="comboAudioOutput" prefWidth="150.0" />
                   <Button id="buttonAudioOutput" mnemonicParsing="false" text="Validate" />
                   <Label text="Master volume">
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </Label>
-                  <Slider id="sliderMasterVolume" />
+                  <Slider id="sliderMasterVolume" fx:id="sliderMasterVolume" max="1.0" />
                </FlowPane>
             </AnchorPane>
          </TitledPane>
          <TitledPane animated="false" collapsible="false" text="Player">
             <BorderPane prefHeight="50.0" prefWidth="200.0">
                <center>
-                  <Slider id="sliderPlayerTime" prefHeight="14.0" prefWidth="405.0" BorderPane.alignment="CENTER" />
+                  <BorderPane BorderPane.alignment="CENTER">
+                     <left>
+                        <Label text="Time: " BorderPane.alignment="CENTER" />
+                     </left>
+                     <right>
+                        <Label text="0:00/0:00" BorderPane.alignment="CENTER" />
+                     </right>
+                     <center>
+                        <Slider id="sliderPlayerTime" prefHeight="14.0" prefWidth="495.0" BorderPane.alignment="CENTER" />
+                     </center>
+                  </BorderPane>
                </center>
                <bottom>
-                  <Label id="labelPlayerName" text="Nom de la musique" BorderPane.alignment="CENTER" />
+                  <Label id="labelPlayerName" text="Name" BorderPane.alignment="CENTER" />
                </bottom>
                <top>
                   <HBox alignment="CENTER" prefHeight="29.0" prefWidth="579.0" BorderPane.alignment="CENTER">
@@ -59,7 +69,8 @@
          <BorderPane prefHeight="200.0" prefWidth="200.0">
             <bottom>
                <HBox BorderPane.alignment="CENTER">
-                  <Button id="buttonPlaylist" mnemonicParsing="false" text="Add" />
+                  <Button id="buttonPlaylistAdd" mnemonicParsing="false" text="Add" />
+                  <Button id="buttonPlaylistRemove" mnemonicParsing="false" text="Remove" />
                </HBox>
             </bottom>
             <center>
