--- a/src/myMP3Player/MyMP3Player.fxml
+++ b/src/myMP3Player/MyMP3Player.fxml
@@ -7,9 +7,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
@@ -17,23 +15,28 @@
    <top>
       <VBox BorderPane.alignment="CENTER">
          <TitledPane animated="false" collapsible="false" prefHeight="60.0" prefWidth="600.0" text="Audio Settings">
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="598.0">
-               <FlowPane columnHalignment="CENTER" prefHeight="50.0" prefWidth="600.0">
-                  <Label text="Output">
+            <BorderPane>
+               <left>
+                  <Label text="Output" BorderPane.alignment="CENTER">
                      <padding>
                         <Insets right="10.0" top="10.0" />
                      </padding>
                   </Label>
-                  <ComboBox id="comboAudioOutput" fx:id="comboAudioOutput" prefWidth="150.0" />
-                  <Button id="buttonAudioOutput" mnemonicParsing="false" text="Validate" />
-                  <Label text="Master volume">
-                     <padding>
-                        <Insets left="10.0" right="10.0" />
-                     </padding>
-                  </Label>
-                  <Slider id="sliderMasterVolume" fx:id="sliderMasterVolume" max="1.0" />
-               </FlowPane>
-            </AnchorPane>
+               </left>
+               <right>
+                  <HBox BorderPane.alignment="CENTER">
+                        <Label text="Master volume">
+                           <padding>
+                              <Insets left="10.0" right="10.0" />
+                           </padding>
+                        </Label>
+                        <Slider id="sliderMasterVolume" fx:id="sliderMasterVolume" max="1.0" />
+                  </HBox>
+               </right>
+               <center>
+                  <ComboBox id="comboAudioOutput" fx:id="comboAudioOutput" prefHeight="25.0" prefWidth="245.0" BorderPane.alignment="CENTER" />
+               </center>
+            </BorderPane>
          </TitledPane>
          <TitledPane animated="false" collapsible="false" text="Player">
             <BorderPane prefHeight="50.0" prefWidth="200.0">
