--- a/src/myMP3Player/MyMP3Player.fxml
+++ b/src/myMP3Player/MyMP3Player.fxml
@@ -30,7 +30,7 @@
                            <Insets left="10.0" right="10.0" />
                         </padding>
                      </Label>
-                     <Slider id="sliderMasterVolume" fx:id="sliderMasterVolume" max="1.0" />
+                     <Slider id="sliderMasterVolume" fx:id="sliderMasterVolume" />
                   </HBox>
                </right>
                <center>
@@ -46,15 +46,15 @@
                         <Label text="Time: " BorderPane.alignment="CENTER" />
                      </left>
                      <right>
-                        <Label text="0:00/0:00" BorderPane.alignment="CENTER" />
+                        <Label fx:id="labelPlayerTime" text="0:00/0:00" BorderPane.alignment="CENTER" />
                      </right>
                      <center>
-                        <Slider id="sliderPlayerTime" prefHeight="14.0" prefWidth="495.0" BorderPane.alignment="CENTER" />
+                        <Slider id="sliderPlayerTime" fx:id="sliderPlayerTime" prefHeight="14.0" prefWidth="495.0" BorderPane.alignment="CENTER" />
                      </center>
                   </BorderPane>
                </center>
                <bottom>
-                  <Label id="labelPlayerName" text="Name" BorderPane.alignment="CENTER" />
+                  <Label id="labelPlayerName" fx:id="labelPlayerName" text="Name" BorderPane.alignment="CENTER" />
                </bottom>
                <top>
                   <HBox alignment="CENTER" prefHeight="29.0" prefWidth="579.0" BorderPane.alignment="CENTER">
