--- a/src/myMusicPlayer/MyMusicPlayer.fxml
+++ b/src/myMusicPlayer/MyMusicPlayer.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
-            fx:controller="myMP3Player.Controller">
+            fx:controller="myMusicPlayer.Controller">
     <top>
         <VBox BorderPane.alignment="CENTER">
             <TitledPane animated="false" collapsible="false" prefHeight="60.0" prefWidth="600.0" text="Audio Settings">
